plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.xiilab'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'io.fabric8:kubernetes-client:6.9.2'
    // K8s Test Mock
    implementation group: 'io.fabric8', name: 'openshift-server-mock', version: '5.12.4'
}

tasks.named('test') {
    useJUnitPlatform()
}
